atualizando link github

--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
 
                 <p>
                     Site desenvoldido com intúito de aprendizado por <br>
-                    <span>Gustavo Oliveira</spa>
+                    <span><a href="https://github.com/GsvvO" target="_blank">Gustavo Oliveira</a></spa>
                 </p>
             </div>
         </div>
